Fixed box layout wrappings

--- a/themes/etc/_box-layout.scss
+++ b/themes/etc/_box-layout.scss
@@ -1,4 +1,5 @@
 #{$prefix}-hbox-layout {
+    white-space: nowrap;
     #{$prefix}-layout-item {
         position:relative;
         display: inline-block;
@@ -6,6 +7,7 @@
 }
 
 #{$prefix}-vbox-layout {
+    white-space: nowrap;
     #{$prefix}-layout-item {
         position:relative;
         display: block;
